# h2k_hpxml

./: .gitignore  CLAUDE.md  compare.py  main.py  pyproject.toml  restructure.md  run.py
docs/: manual_install.md  publish.md  resilience.md
h2ktohpxml/config/: selection.json
h2ktohpxml/enclosure/: windows.py
prompts/: resilience.md
scripts/: clean_test_data.py  compare.py  run.py
src/h2k_hpxml/: __init__.py
src/h2k_hpxml/cli/: __init__.py  h2k2hpxml.py  resilience.py
src/h2k_hpxml/resources/weather/: h2k_weather_names.csv
src/h2k_hpxml/utils/: h2k_weather_names.py  weather.py
tests/: README.md
tests/utils/: workflow_utils.py
