[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2k-hpxml"
version = "1.0.0"
description = "H2K to HPXML translation tool for building energy modeling"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "H2K-HPXML Team", email = "team@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.2",
    "pandas==2.1.3",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "tzdata==2023.3",
    "xmltodict==0.13.0",
    "unidecode==1.3.8",
    "click==8.1.7",
    "colorama==0.4.6",
    "pyfiglet==1.0.2",
    "requests==2.32.3",
    "filelock==3.18.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[project.scripts]
h2k2hpxml = "h2k_hpxml.cli.h2k2hpxml:cli"
h2k-resilience = "h2k_hpxml.cli.resilience:resilience"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
h2k_hpxml = [
    "config/*.json",
    "resources/templates/*.xml",
    "resources/weather/*.csv",
    "resources/weather/*.txt",
    "resources/weather/*.json",
]